environments/project-local/nats-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-dep
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats:2.10-alpine
        args: ["-js"]
        ports:
        - containerPort: 4222
          name: client
        - containerPort: 8222
          name: monitoring
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: default
spec:
  selector:
    app: nats
  ports:
  - name: client
    port: 4222
    targetPort: 4222
  - name: monitoring
    port: 8222
    targetPort: 8222

###
### kubectl apply -f nats-dep.yaml
### kubectl -n default get pods -w
### kubectl -n default get svc | grep nats
###
