environments/project-local/todo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project
  name: todo-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-svc
            port:
              number: 1234
      - path: /todos  # Rewrite rule
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port: 
              number: 4567
